--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "nteath/listener",
     "require": {
-        "pda/pheanstalk": "3.0.*"
+        "pda/pheanstalk": "3.0.*",
+        "rmccue/requests": ">=1.0"
+    },
+    "autoload": {
+        "classmap": ["public/Response.php"]
     },
     "authors": [
         {
